--- a/index.css
+++ b/index.css
@@ -241,24 +241,57 @@ img {
   height: auto;
 }
 
-/* Mobile Responsive */
-@media (max-width: 768px) {
+@media (max-width:768px){
 
-  body {
-    padding: 10px;
-  }
+header{
+flex-direction:column;
+height:auto;
+padding:10px;
+}
 
-  .container {
-    width: 100%;
-  }
+.nav{
+min-width:100%;
+flex-wrap:wrap;
+justify-content:center;
+}
 
-  .row {
-    flex-direction: column;
-  }
+.search_bar{
+min-width:100%;
+width:100%;
+}
 
-  nav {
-    display: block;
-    text-align: center;
-  }
+.action_bar{
+min-width:100%;
+justify-content:center;
+}
+
+.slider{
+height:220px;
+}
+
+.box{
+width:90%;
+display:block;
+margin:15px auto;
+}
+
+.innerbox{
+width:100%;
+height:200px;
+background-size:cover;
+background-position:center;
+}
+
+p{
+position:static;
+right:0;
+text-align:center;
+font-size:22px;
+}
+
+.Hackathon_Home{
+height:80px;
+}
 
 }
+
